crates/octl-cli/tests/snapshots/envelope_snapshots__event_tail_text.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
[1] [TS] run.created title=seed-run
[2] [TS] node.created node=n-0001
[3] [TS] node.created node=n-1000
[4] [TS] node.created node=n-1001
[5] [TS] node.created node=n-1002
