crates/octl-cli/tests/snapshots/envelope_snapshots__event_tail_unsupported_format_error.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"unsupported_format","message":"streaming verbs do not support --output json (pretty single-document); use jsonl or text"}}
