crates/octl-cli/tests/snapshots/envelope_snapshots__global_unknown_flag_error.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"unknown_subcommand_or_flag","message":"error: unexpected argument '--frobnicate' found  Usage: orchestratectl [OPTIONS] <COMMAND>"}}
