crates/octl-cli/tests/snapshots/envelope_snapshots__node_report_json.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "node_id": "n-0001",
    "event_seq": 3
  },
  "warnings": []
}
